# RAG-Against-the-machine

./: .gitignore  main.py  pyproject.toml  test_json.txt
src/: ai_answer.py  chunker.py  cli_interface.py  indexing.py  loader.py  main.py  my_bm25.py  my_enum.py  required_class.py  to_json.py
