[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.9",
    "dspy>=3.2.1",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "tqdm>=4.68.3",
]
